Fixed codes deprecated and default password